--- a/tests/lua-empty-test/project/proj.tizen/.project
+++ b/tests/lua-empty-test/project/proj.tizen/.project
@@ -35,6 +35,11 @@
 			<type>2</type>
 			<locationURI>PARENT-1-PROJECT_LOC/Classes</locationURI>
 		</link>
+		<link>
+			<name>Classes/AppDelegate.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-9-PROJECT_LOC/git/cocos2d-x-3.4/tests/lua-empty-test/project/Classes/AppDelegate.cpp</locationURI>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
